src/objects/Initial_Assessment_Form__c.object
<CustomObject>
    <fields>
        <fullName>X8_Have_you_been_unable_to_remember__c</fullName>
        <inlineHelpText>8. How often during the last year have you been unable to remember what happened the night before because you had been drinking?</inlineHelpText>
        <label>8. Have you been unable to remember</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less than monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X8_Take_a_drug_morning_after_heavy_drug__c</fullName>
        <inlineHelpText>How often over the past year have you needed to take a drug the morning after heavy drug use the day before?</inlineHelpText>
        <label>8.Take a drug morning after heavy drug</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less often that one month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Every month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Every week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost every day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X9_Guilt_or_bad_feelings_over_drug_use__c</fullName>
        <inlineHelpText>How often over the past year have you had guilt feelings or a bad conscience because you used drugs?</inlineHelpText>
        <label>9.Guilt or bad feelings over drug use?</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less often that one month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Every month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Every week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost every day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X9_Have_you_been_injured__c</fullName>
        <inlineHelpText>9. Have you or someone else been injured as a result of your drinking?</inlineHelpText>
        <label>9. Have you been injured</label>
        <picklist>
            <picklistValues>
                <fullName>(0) No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Yes, but not in the last year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Yes, during the last year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>You_wish_to_address_your_substance_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ‘no’ to above, do you wish to address your substance use?</inlineHelpText>
        <label>You wish to address your substance use?</label>
        <type>Checkbox</type>
    </fields>
    <label>Initial Assessment Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IAF-{YY}-{0000}</displayFormat>
        <label>Initial Assessment Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initial Assessment Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>